--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,8 +465,14 @@ a:hover {
   padding: 20px 0;
 }
 
+/* .mdd {
+  margin: 0!important;
+  padding: 0;
+  height: 100px;
+  width: 100px;
+} */
 #header .logo {
-  font-size: 28px;
+  font-size: 20px;
   margin: 0;
   padding: 0;
   font-weight: 600;
