--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,7 +491,9 @@ a:hover {
   background: rgba(0, 0, 0, 0.9);
   padding: 12px 0;
 }
-
+.logo:hover {
+  color: #01EEFC;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -974,6 +976,9 @@ a:hover {
 
 .work-img img {
   transition: all 1s;
+}
+.img-sage-forest {
+
 }
 
 .work-content {
